# upytl

./: .gitignore  LICENSE  README.md  bulma_demo.html  bulma_demo.py  example.html  example.py  pyproject.toml  setup.py  upytl.js
.github/workflows/: run_test.yaml
tests/: test_install.py
upytl/: __init__.py  bulma.py  core.py  helpers.py  html.py  xtemplate.py
